[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "lekkersim"
description = "The lekker tool for photonic circuit simulation."
readme = "README.md"
version="0.0.0"
authors = ["Marco Passoni <mpasson91@gmail.com>"]
license = "AGPLv3+"
repository = "https://github.com/mpasson/lekkersim"
documentation = "https://lekkersim.readthedocs.io"
keywords = [
  'photonics',
  'simulation',
  'scattering matrix',
  'photonic circuits',
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: AGPLv3+ License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
format = '{base}.post{distance}+git-{commit}.{dirty}'

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.23.1"
pandas = "^1.4.2"
PyYAML = "^6.0"
scipy = "^1.8.0"