[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "lekkersim"
description = "The lekker tool for photonic circuit simulation."
readme = "README.md"
authors = [
  { name = "Marco Passoni", email = "mpasson91@gmail.com" },
]
license = "AGPLv3+"
repository = "https://github.com/mpasson/lekkersim"
documentation = "https://lekkersim.readthedocs.io"
keywords = [
  'photonics',
  'simulation',
  'scattering matrix',
  'photonic circuits',
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic =["version"]
dependencies = [
  "matplotlib>=3.5.1",
  "numpy>=1.23.1",
  "pandas>=1.4.2",
  "PyYAML>=6.0",
  "scipy>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "toml>=0.10.2",
  "hatch-vcs==0.3.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "lekkersym/_version.py"